--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   max-width: 1240px;
   margin: 0 auto;
   padding: 0 15px;
-  height: 100px;
+  height: 100%;
 }
 
 .header {
@@ -43,13 +43,67 @@ body {
   background: transparent;
 }
 
-@media screen and (max-width:450px ) {
-    .header-logo{
-        display: none;
-    }
-
-    .header__content{
-        justify-content: center;
-    }
+.hero {
+  background: url(/images/Background.jpg) 0 0 / cover;
+  height: 700px;
 }
 
+.hero__content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.hero-title {
+  margin: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 52px;
+  font-weight: 700;
+}
+
+.hero-text {
+  margin: 26px 0 30px 0;
+  color: #f7f3f2;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 24.5px;
+}
+
+.hero-btn {
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  width: 225px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 40px;
+  background: #ff4e50;
+  border: none;
+}
+@media screen and (max-width: 510px) {
+  .hero-title {
+    font-size: 30px;
+  }
+
+
+
+  .hero-text {
+    font-size: 18px;
+    margin: 5px 0 15px 0 ;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header-logo {
+    display: none;
+  }
+
+  .header__content {
+    justify-content: center;
+  }
+}
